# cosmic-order

./: .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  i18n.toml  justfile  rustfmt.toml
.githooks/: pre-commit  pre-push
.github/: ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml  runner-smoke.yml
debian/: changelog  control  copyright  rules
debian/source/: options
docs/: LICENSING.md  PROJECT-NAMING.md  ROADMAP.md  SCREENSAVER-INTEGRATION.md  TOOL-INTEGRATION.md  UPSTREAM-BUGS.md  screensaver.tape
docs/architecture/: OVERVIEW.md
docs/development/: CONTRIBUTING.md  LEARNINGS.md  LINTING.md  NATIVE-MIGRATION.md  PATTERNS.md  RELEASE-RUNNER.md  SETUP.md  TESTING.md  WORKFLOW.md
docs/research/: COSMIC-SETTINGS.md  LIBCOSMIC.md
i18n/en/: cosmic_order.ftl  cosmic_tweaks.ftl
prs/: LOG.md  pr-02-fix-theme-apply-import.md
resources/: com.github.jfreed-dev.CosmicOrder.desktop  com.github.jfreed-dev.CosmicOrder.metainfo.xml  com.github.jfreed-dev.CosmicOrderApplet.desktop
resources/i18n/en/: cosmic_tweaks.ftl
resources/screensaver/: cosmic-screensaver.sh  launch-fullscreen.sh  screensaver-ctl.sh
resources/screensaver/logos/: LICENSES.md  cosmic-icon.txt  cosmic-name-with-icon.txt  cosmic-name.txt  framework-icon.txt  framework-name-with-icon.txt  framework-name.txt  pop-framework-laptop.txt  pop-os-icon.txt  pop-os-name-with-icon.txt  pop-os-name.txt
scripts/: Dockerfile.deb-builder  Dockerfile.runner  compose.runner.yaml  health-check.sh  runner-entrypoint.sh  vm-test.sh
src/: app.rs  bundled_themes.rs  cli.rs  colors.rs  compositor.rs  config.rs  cosmic_idle.rs  hooks.rs  inhibit.rs  localize.rs  main.rs  paths.rs  power.rs  screensaver_config.rs  session_lock.rs  sleep_lock.rs  systemd.rs  theme_config.rs  tool_sync.rs  wallpaper_config.rs  wayland_idle.rs
src/app/: idle.rs  mod.rs  screensaver.rs  tool_sync_view.rs  visuals.rs
src/generators/: btop.rs  fzf.rs  ghostty.rs  lazygit.rs  mod.rs  nvim.rs  zellij.rs
src/pages/: mod.rs
themes/: accent-dark.ron  accent-light.ron  busy-bee.ron  caramel-dark.ron  caramel-light.ron  cosmic-abyss.ron  cosmic-crimson.ron  cosmictron-blue.ron  cosmictron-brown.ron  cosmictron-green.ron  cosmictron-pink.ron  cosmictron-purple.ron  cosmictron-red.ron  cosmictron-teal.ron  cosmictron-yellow.ron  flaming-ruby.ron  hot-iron.ron  lemon-grass.ron  lunar-eclipse.ron  maroon-mirage.ron  mint-dark.ron  mint-light.ron  obsidian.ron  ocean-mist.ron  omnitrix.ron  royal-orchid.ron  shadcn-dark.ron  shadcn-light.ron  ubuntu-classic-dark.ron  ubuntu-classic.ron  ubuntu-light.ron  void-dream.ron
